@@ -256,5 +256,33 @@ class MenuNodeAPIHookTestCase extends MenuNodeAPITestCase {
     // Check that we have the expected record count.
     $count = db_query("SELECT COUNT(*) FROM {menu_node}")->fetchField();
     $this->assertTrue($count == 1, t('Found the correct row count in {menu_node}.'));
+
+    // Update an existing node and check that the hooks fire.
+    $query = db_select('node', 'n')
+      ->fields('n', array('nid'))
+      ->range(0, 1);
+    $query->join('menu_node', 'mn', 'n.nid = mn.nid');
+    $result = $query->execute();
+    foreach ($result as $data) {
+      $node = node_load($data->nid, NULL, TRUE);
+    }
+    // Check that our data is loaded onto the node.
+    $this->assertTrue(isset($node->menu_node_links), t('menu_node_node_load() fired correctly'));
+    // Update the title.
+    $node->title = $this->randomName(12);
+    $menu = current(menu_node_get_links($node->nid));
+    // Similate a node save, with menu item.
+    $node->menu['enabled'] = TRUE;
+    $node->menu['mlid'] = $menu->mlid;
+    $node->menu['link_path'] = $menu->link_path;
+    $node->menu['description'] = '';
+    $node->menu['link_title'] = $node->title;
+    node_save($node);
+    $this->assertTrue(menu_node_test_get() == 'update', t('hook_menu_node_update() fired properly on node save with menu link.'));
+
+    // Simulate a node save, removing the menu item.
+    $node->menu['enabled'] = FALSE;
+    node_save($node);
+    $this->assertTrue(menu_node_test_get() == 'delete', t('hook_menu_node_delete() fired properly on node save with menu link removed.'));
   }
 }
