@@ -5,6 +5,8 @@ CHANGELOG for Menu Node
 02-JAN-2010
 -- Better testing. Finds http://drupal.org/node/1012768 bug.
 -- Changes $items to $links in most cases.
+-- Fixes all tests, pending #1012768.
+-- Adds API documentation file.
 
 01-JAN-2010
 -- #1011782. Major D7 upgrade, thanks to Coder module.
